# bcloud

./: .angular-cli.json  .gitignore  CMakeLists.txt  HISTORY  MANIFEST  README.md  README.txt  TODO.md  bcloud-gui  build_translations.sh  gcloud.py  package-lock.json  package.json  setup.py  tsconfig.json  tslint.json
backend/: Cargo.toml
bcloud/: App.py  BTBrowserDialog.py  CategoryPage.py  CloudPage.py  Config.py  DownloadPage.py  Downloader.py  ErrorMsg.py  FileWatcher.py  FolderBrowserDialog.py  HomePage.py  IconWindow.py  InboxPage.py  MimeProvider.py  NewFolderDialog.py  PreferencesDialog.py  PropertiesDialog.py  RenameDialog.py  RequestCookie.py  SharePage.py  Shutdown.py  SigninDialog.py  TrashPage.py  UploadPage.py  Uploader.py  VCodeDialog.py  Widgets.py  __init__.py  auth.py  const.py  decoder.py  encoder.py  gutil.py  hasher.py  log.py  net.py  pcs.py  util.py
bcloud-backend/: Cargo.toml
bcloud-ui/: .editorconfig  package.json
e2e/: app.e2e-spec.ts  tsconfig.e2e.json
gcloud/: App.py  BTBrowserDialog.py  BTPage.py  BasePage.py  CategoryPage.py  CloudPage.py  Config.py  DocPage.py  DownloadPage.py  Downloader.py  FolderBrowserDialog.py  HomePage.py  IconWindow.py  InboxPage.py  MimeProvider.py  MusicPage.py  NewFolderDialog.py  OtherPage.py  PicturePage.py  PreferencesDialog.py  PropertiesDialog.py  RenameDialog.py  RequestCookie.py  SearchPage.py  SharePage.py  SigninDialog.py  TrashPage.py  UploadPage.py  VCodeDialog.py  VideoPage.py  Widgets.py  auth.py  const.py  encoder.py  gutil.py  net.py  pcs.py  util.py
native/: main.ts  tsconfig.json
(+62 files in other folders)
